Changes in: chromium bug 1123708 workaround, buffer canvas flickering, pageload, seeking and resizing performance
- Decreased chromium bug 1123708 workaround canvas overflow
- Prevent buffer canvas flickering by connecting all the canvas elements to a visible DOM element
- Delay ambilight loading on page load
- Hide overlay while seeking
- Seeking performance improvement
- Resizing between default, theater, fullscreen views performance improvements

--- a/src/styles/youtube-ambilight.scss
+++ b/src/styles/youtube-ambilight.scss
@@ -38,6 +38,20 @@
   overflow: hidden;
 }
 
+/* Workaround for flickering canvasses */
+.ambilight__buffers-wrapper {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  opacity: 0.00001;
+  pointer-events: none;
+  display: flex;
+  * {
+    width: 1px;
+    height: 1px;
+  }
+}
+
 /* FPS */
 
 .ambilight__fps-list {
@@ -349,7 +363,7 @@ html[data-ambilight-enabled="true"] {
       position: absolute;
       width: 100%;
       height: 100%;
-      transform: scale(1.15) rotate(5deg);
+      transform: scale(2) rotate(30deg);
   }
 
   .ambilight__video-overlay {
